deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alpine-bis
  namespace: trivy-operator-web-ui
  labels:
    app: alpine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alpine
  template:
    metadata:
      labels:
        app: alpine
    spec:
      containers:
      - name: alpine
        image: alpine:3.11.12
        tty: true
