deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivy-operator-web-ui
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PATH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: trivy-operator-web-ui
            port:
              number: 8080
      - path: /static
        pathType: Prefix
        backend:
          service:
            name: trivy-operator-web-ui
            port:
              number: 8080
